# Code-Review-Workbench

./: .env.example  .gitignore  .gitleaks.toml  README.md  docker-compose.yml  prometheus.yml  test_e2e.py  test_sample.py
.github/workflows/: ci.yml
acceptance_samples/src/api/: routes.py
acceptance_samples/src/models/: user.py
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_memory_tables.py  b2c3d4e5f6a7_resize_embedding_to_2048.py  fab89f747922_initial.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: reviews.py  skills.py  webhooks.py  ws.py
backend/app/core/: celery_app.py  orchestrator.py  state.py  tasks.py
backend/app/core/agents/: __init__.py  arbitrator.py  architecture.py  base.py  collaboration.py  performance.py  refactor.py  security.py  style.py
backend/app/core/compression/: chunker.py  summarizer.py  token_manager.py
backend/app/core/memory/: __init__.py  episodic.py  procedural.py  semantic.py  working.py
backend/app/core/skills/: __init__.py  executor.py  loader.py  registry.py
backend/app/core/skills/builtin/: __init__.py  ast_scan.py  complexity_check.py  cve_check.py  dep_analyze.py  diff_context.py  refactor_suggest.py  secret_leak_detect.py  semgrep_scan.py  sql_injection_detect.py  style_check.py
backend/app/integrations/: ast_engine.py  github.py  gitlab.py  llm.py  repo_fetcher.py
backend/app/models/: __init__.py  agent_result.py  memory.py  report.py  review.py
backend/app/utils/: logger.py  metrics.py  telemetry.py
backend/memory_data/: README.md
backend/tests/: conftest.py  test_phase1_manual.py
backend/tests/test_agents/: __init__.py  test_collaboration.py  test_performance.py  test_security.py  test_style.py
backend/tests/test_api/: test_health.py  test_reviews.py  test_skills.py  test_webhooks.py
backend/tests/test_compression/: test_chunker.py
backend/tests/test_core/: test_orchestrator.py  test_tasks.py
backend/tests/test_memory/: __init__.py  test_episodic.py  test_memory_manager.py  test_working.py
backend/tests/test_skills/: __init__.py  test_ast_scan.py
docs/: api-reference.md  architecture.md  phase-1-scaffold.md  phase-2-multi-agent.md  phase-3-memory-frontend.md  phase-4-production.md  project-overview.md  skill-development.md
docs/superpowers/plans/: 2026-07-08-agent-collaboration.md
docs/superpowers/specs/: 2026-07-08-agent-collaboration-design.md
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/pages/: Dashboard.tsx  ReviewCreate.tsx  ReviewDetail.tsx  Settings.tsx  SkillManager.tsx
frontend/src/services/: api.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
(+10 files in other folders)
